--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus id praesentium quaerat! Quis mollitia sunt
         fuga unde dolorem, maxime officia nisi magnam sapiente labore officiis et pariatur ab nulla nesciunt!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus id praesentium quaerat! Quis mollitia sunt
+        fuga unde dolorem, maxime officia nisi magnam sapiente labore officiis et pariatur ab nulla nesciunt!</p>
 </body>
 
 </html>
